--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ build_flags =
     -Isrc/CMSIS/
     -Isrc/Device
 check_flags =
-  cppcheck:--addon=misra.json --std=c99 --language=c  --suppress=*:*/src/CMSIS/*
+  cppcheck:--addon=misra.json --std=c99 --language=c ;--suppress=*:*/src/CMSIS/*
