Minimize check scope

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,10 @@ board_build.ldscript = src/Device/STM32F103XB_FLASH.ld
 build_flags =
     -Isrc/CMSIS/
     -Isrc/Device
+
+check_skip_packages = yes ;don't inlcude compiler package inludes
+check_patterns = 
+  src/*.c
+  src/*.h
 check_flags =
   cppcheck:--addon=misra ;--suppress=*:*/src/CMSIS/*
